Update and rename style-7-10-2023-0242.css to style-7-14-2023-0830.css

--- a/jobBoardGithub/style-set/style-7-14-2023-0830.css
+++ b/jobBoardGithub/style-set/style-7-14-2023-0830.css
@@ -6,6 +6,9 @@
   .a-button {
     margin-left: 2.5%;
   }
+  .search-margin {
+    margin-top: 5%;
+  }
 
 /*For the job position cards */
   .card {
